--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <title>Todo</title>
-    
+
 </head>
+
 <body>
-    <div id="root">Not rendered yet</div>
+    <div id="root">
+        <h1>And we're off the ground!! <span role="img" aria-label="Rocket">🚀</span> </h1>
+    </div>
     <script src="./App.js"></script>
 </body>
+
 </html>
