modify links for gh pages

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <div id="root">
         <h1>And we're off the ground!! <span role="img" aria-label="Rocket">🚀</span> </h1>
     </div>
-    <script src="./App.js"></script>
+    <script src="App.js"></script>
 </body>
 
 </html>
